--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html dir="ltr" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ionic PWA Toolkit</title>
+  <title>Madness Enjineer</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <meta name="description" content="Welcome to the Ionic PWA Toolkit. You can use this starter to build fast PWAs using Ionic and Stencil!">
+  <meta name="description" content="The web builder">
   <meta name="theme-color" content="#16161d">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -20,6 +20,10 @@
 
   <script src="/assets/js/grapes.min.js"></script>
   <script src="/assets/js/grapesjs-preset-newsletter.min.js"></script>
+  <script src="/assets/js/firebase-app.js"></script>
+  <script async defer src="/assets/js/firebase-auth.js"></script>
+  <script async defer src="/assets/js/firebase-firestore.js"></script>
+  <script async defer src="/assets/js/firebase-storage.js"></script>
 
   <script src="/build/app.js"></script>
 
@@ -29,7 +33,7 @@
 </head>
 <body>
 
-  <my-app></my-app>
+  <madness-enjineer></madness-enjineer>
 
 </body>
 </html>
